--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -33,3 +33,41 @@
     padding: 1rem;
     background-color: var(--laranja);
 }
+
+@media screen and (min-width: 1024px) {
+
+    .topicos {
+        border-top: 0;
+        padding: 0;
+    }
+
+    .topicos__titulo {
+        font-size: 24px;
+        padding: 2rem 0;
+    }
+
+    .topicos__link {
+        font-size: 24px;
+    }
+
+    .topicos__lista {
+        padding-bottom: 1rem;
+    }
+
+    .topicos__link:hover {
+        background-color: orange;
+        padding: 1.3rem;
+        border-radius: 5px;
+    }
+}
+
+@media screen and (min-width:1728px) {
+
+    .topicos {
+        padding: 2rem 30vw;
+    }
+
+    .topicos__titulo {
+        font-size: 32px;
+    }
+}
